ajout csv pour chiffres clés covid france

--- a/TestSIR_alex.ipynb
+++ b/TestSIR_alex.ipynb
@@ -333,15 +333,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On voit que le nombre d'hospitalisations a commencé à baisser à partir de de mi avril. La courbe des hospitalisations ne peut donc pas être correctement utilisée comme une courbe du nombre d'infectés (cela impliquerait que la France soit déjà en stade de fin d'épidémie). Cependant on peut quand même fitter le modèle pour vérifier qu'il fonctionne."
+    "On voit que le nombre d'hospitalisations a commencé à baisser à partir de de mi avril. La courbe des hospitalisations ne peut donc pas être correctement utilisée comme une courbe du nombre d'infectés (cela impliquerait que la France soit déjà en stade de fin d'épidémie). Ce jeu de données n'est pas adapté pour une modélisation SIR.\n",
+    "\n",
+    "(Il est technique possible de fitter un modèle SIR sur cette courbe, cela dit, bien que cela n'ait pas de pertinence particulière)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# work in progress :)"
+   ]
   }
  ],
  "metadata": {
