updated notebooks demonstrations

--- a/TestSIR_chiffres_clés.ipynb
+++ b/TestSIR_chiffres_clés.ipynb
@@ -249,16 +249,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sir = SIRModel()"
+    "sir = SIRModel(N=67000000, R0=0, I0=df.loc[0, \"cas_confirmes\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -279,10 +279,10 @@
     {
      "data": {
       "text/plain": [
-       "<model.sirmodel.SIRModel at 0x7f3ac068e7c0>"
+       "<model.sirmodel.SIRModel at 0x7f269eb17a30>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,16 +312,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3a8616e5e0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f269ca5fc70>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -343,16 +343,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f3a839564c0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f269c97e700>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
