added soutenance doc

--- a/exploration_chiffres_cles_18_06.ipynb
+++ b/exploration_chiffres_cles_18_06.ipynb
@@ -123,6 +123,46 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "date                                                                 2020-01-24\n",
+       "granularite                                                                pays\n",
+       "maille_code                                                                 FRA\n",
+       "maille_nom                                                               France\n",
+       "cas_confirmes                                                                 3\n",
+       "cas_ehpad                                                                   NaN\n",
+       "cas_confirmes_ehpad                                                         NaN\n",
+       "cas_possibles_ehpad                                                         NaN\n",
+       "deces                                                                         0\n",
+       "deces_ehpad                                                                 NaN\n",
+       "reanimation                                                                 NaN\n",
+       "hospitalises                                                                  3\n",
+       "nouvelles_hospitalisations                                                  NaN\n",
+       "nouvelles_reanimations                                                      NaN\n",
+       "gueris                                                                      NaN\n",
+       "depistes                                                                    NaN\n",
+       "source_nom                                                Santé publique France\n",
+       "source_url                    https://www.santepubliquefrance.fr/maladies-et...\n",
+       "source_archive                https://web.archive.org/web/20200124202351/htt...\n",
+       "source_type                                               sante-publique-france\n",
+       "Name: 13, dtype: object"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.iloc[0]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -131,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -257,7 +297,7 @@
        "[273 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -341,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -354,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -367,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -405,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -419,10 +459,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x143e85f8>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x147b1808>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -452,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,16 +501,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x14484118>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1484e0a0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -500,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -514,10 +554,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x145238b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x148eee80>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -567,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
