Small change to SOutnenance notebook

--- a/Soutenance_notebook.ipynb
+++ b/Soutenance_notebook.ipynb
@@ -135,7 +135,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -167,6 +166,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Modèle SIR\n",
+    "\n",
+    "Le modèle SIR se base sur deux paramètres :\n",
+    "- Le taux d'infection\n",
+    "- La vitesse de guérison\n",
+    "\n",
+    "De ces deux paramètres on calcule des variables S, I, R (d'où le nom) qui représentent:\n",
+    "- S : le nombre de gens sains qui peuvent être infectés\n",
+    "- I : Le nombre d'infectés\n",
+    "- R : Le nombre de gens sains soignés immunisés"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Premiers tests avec le modèle SIR"
    ]
   },
@@ -179,22 +194,6 @@
     "https://towardsdatascience.com/infectious-disease-modelling-part-i-understanding-sir-28d60e29fdfc\n",
     "\n",
     "https://towardsdatascience.com/infectious-disease-modelling-beyond-the-basic-sir-model-216369c584c4"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### modèle SIR\n",
-    "\n",
-    "Le modèle SIR se base sur deux paramètres :\n",
-    "- Le taux d'infection\n",
-    "- La vitesse de guérison\n",
-    "\n",
-    "De ces deux paramètres on calcule des variables S, I, R (d'où le nom) qui représentent:\n",
-    "- S : le nombre de gens sains qui peuvent être infectés\n",
-    "- I : Le nombre d'infectés\n",
-    "- R : Le nombre de gens sains soignés immunisés"
    ]
   },
   {
@@ -222,7 +221,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -295,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
