--- a/Soutenance_notebook.ipynb
+++ b/Soutenance_notebook.ipynb
@@ -182,6 +182,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](https://media.discordapp.net/attachments/381127038867603478/723469391622307910/15caEXgP-6ZG7HkrPECKAEA.png)\n",
+    "\n",
+    "![](https://i.imgur.com/cqb4Zu7.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Premiers tests avec le modèle SIR"
    ]
   },
@@ -226,7 +235,9 @@
    "source": [
     "#### modèle SEIR\n",
     "\n",
-    "Avec le modèle SEIR on ajoute une notion d'incubation. Une personne ne passe plus de l'état S à l'état I directement, mais passe par un état temporaire E (exposed) qui représente une infection non contagieuse. On ajoute ainsi un paramètre à calculer $\\delta$ représentant le temps d'incubation.\n",
+    "Avec le modèle SEIR on ajoute une notion d'incubation. Une personne ne passe plus de l'état S à l'état I directement, mais passe par un état temporaire E (exposed) qui représente une infection non contagieuse. On ajoute ainsi un paramètre à calculer delta $\\delta$ représentant le temps d'incubation.\n",
+    "\n",
+    "![](https://i.imgur.com/W9hSr2C.png)\n",
     "\n",
     "###### Préconfinement\n",
     "\n",
@@ -268,13 +279,6 @@
     "\n",
     "![](https://i.imgur.com/6mpCd1H.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -293,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
